# piqa

./: .gitignore  .style.yapf  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  docs.sh  readthedocs.yml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug-report.md  documentation.md  feature-request.md
docs/: api.rst  conf.py  gmsd.html  haarpsi.html  index.html  index.rst  lpips.html  mdsi.html  psnr.html  requirements.txt  ssim.html  tv.html
docs/static/: custom.css
docs/templates/autosummary/: module.rst
docs/utils/: color.html  complex.html  functional.html  index.html
piqa/: __init__.py  fid.py  fsim.py  gmsd.py  haarpsi.py  lpips.py  mdsi.py  psnr.py  ssim.py  tv.py  utils.py  vsi.py
piqa/utils/: __init__.py  color.py  complex.py  functional.py
piqa/weights/: lpips_VGG16.pth
sphinx/: build.sh  conf.py  index.rst
sphinx/static/: custom.css
sphinx/templates/autosummary/: module.rst
spiq/: __init__.py  gmsd.py  lpips.py  mdsi.py  psnr.py  ssim.py  tv.py  utils.py
spiq/weights/: lpips_AlexNet.pth  lpips_SqueezeNet.pth
tests/: benchmark.py  doctests.py  main.py
