[metadata]
name = piqa
version = attr: piqa.__version__
description = PyTorch Image Quality Assessment
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    torch
    vision
    image
    quality
    metrics
author = François Rozet
author_email = francois.rozet@outlook.com
license = MIT License
url = https://github.com/francois-rozet/piqa
project_urls =
    Documentation = https://piqa.readthedocs.io
    Source = https://github.com/francois-rozet/piqa
    Tracker = https://github.com/francois-rozet/piqa/issues
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3

[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
